# mcp-ai-testing-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ai-tests.yml
docs/: contributing.md  getting-started.md
examples/: simple_test.py
src/core/: ai_agent.py
